--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ BASE_URL=http://localhost:5001
 FRONTEND_URL=http://localhost:8080
 
 FLW_PUBLIC_KEY=
-FLW_SECRET_KEY=FLWSECK-fac9514ef094ba319897c02a1bbccffd-19a37c4b21evt-X
+FLW_SECRET_KEY=
 FLW_ENCRYPTION_KEY=
-MONGO_URI=mongodb+srv://HIGHTECHEMPSITE:Raymond11%24@cluster0.8vrp5ws.mongodb.net/hitech
+MONGO_URI=
 
 ADMIN_EMAIL=oparahraymond72@gmail.com
 PROMO_LIMIT=300
